[gd_scene load_steps=52 format=3 uid="uid://fp2kjv70lur3"]

[ext_resource type="Script" uid="uid://werk8lrckice" path="res://scripts/player/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://g2mkj2cqsphe" path="res://assets/platformer_sprites_pixelized_1.png" id="3_dqkch"]
[ext_resource type="Shape2D" uid="uid://caeu0l5xg45co" path="res://resources/standing_collision_shape.tres" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://d0k7cag1bjcy3" path="res://scripts/player/states/States.gd" id="4_3v2ag"]
[ext_resource type="Script" uid="uid://7h11j1c6pbxj" path="res://scripts/player/states/idle_state.gd" id="5_d2wvv"]
[ext_resource type="Script" uid="uid://uaqu2jl8m0du" path="res://scripts/player/states/run_state.gd" id="6_3v2ag"]
[ext_resource type="Script" uid="uid://cg2iencac1yp8" path="res://scripts/player/states/jump_state.gd" id="7_jej6c"]
[ext_resource type="Script" uid="uid://22qttwcywnsc" path="res://scripts/player/states/fall_state.gd" id="8_f1ej7"]
[ext_resource type="Script" uid="uid://dc3ijotir8aem" path="res://scripts/player/states/crouch_state.gd" id="9_oprun"]
[ext_resource type="Script" uid="uid://dbrhtockfqo8b" path="res://scripts/player/states/crouch_walk_state.gd" id="10_a8ls1"]
[ext_resource type="Script" uid="uid://bewcvl3hxyfjr" path="res://scripts/player/states/roll_state.gd" id="11_qfm1y"]
[ext_resource type="Script" uid="uid://0qe40hjkrsj7" path="res://scripts/player/states/dash_state.gd" id="12_3v2ag"]
[ext_resource type="Script" uid="uid://b4d8m47dve5tf" path="res://scripts/player/states/wall_jump_state.gd" id="13_jej6c"]
[ext_resource type="Script" uid="uid://d1dm8od2bt7h6" path="res://scripts/player/states/running_ice_state.gd" id="14_f1ej7"]
[ext_resource type="Script" uid="uid://dsvwn2yib2n08" path="res://scripts/player/states/sliding.gd" id="15_oprun"]
[ext_resource type="Script" uid="uid://dbaartkvgxmsq" path="res://scripts/player/states/running_mud.gd" id="16_a8ls1"]
[ext_resource type="Script" uid="uid://curbpiwt3jo0b" path="res://scripts/player/states/grappling.gd" id="17_qfm1y"]
[ext_resource type="PackedScene" uid="uid://beq8q2v4stw41" path="res://scenes/Player/Heart.tscn" id="18_fulsm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("3_dqkch")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("3_dqkch")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("3_dqkch")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("3_dqkch")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("3_dqkch")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_dqkch")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("3_dqkch")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_dqkch")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_dqkch")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("3_dqkch")
region = Rect2(336, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("3_dqkch")
region = Rect2(384, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("3_dqkch")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("3_dqkch")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("3_dqkch")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("3_dqkch")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("3_dqkch")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("3_dqkch")
region = Rect2(192, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("3_dqkch")
region = Rect2(240, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("3_dqkch")
region = Rect2(288, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("3_dqkch")
region = Rect2(336, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("3_dqkch")
region = Rect2(384, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("3_dqkch")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("3_dqkch")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("3_dqkch")
region = Rect2(336, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("3_dqkch")
region = Rect2(384, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("3_dqkch")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("3_dqkch")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("3_dqkch")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("3_dqkch")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("3_dqkch")
region = Rect2(384, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("3_dqkch")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("3_dqkch")
region = Rect2(288, 144, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_fjrip"]
animations = [{
"frames": [],
"loop": true,
"name": &"Wall_Jump",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Wall_Kick",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 7.51,
"texture": SubResource("AtlasTexture_dqkch")
}],
"loop": true,
"name": &"crouch",
"speed": 2.0
}, {
"frames": [{
"duration": 1.01,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.01,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.01,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.01,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": true,
"name": &"crouch_walk",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}],
"loop": true,
"name": &"dash",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}],
"loop": true,
"name": &"mud_run",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 5.81,
"texture": SubResource("AtlasTexture_wqfne")
}],
"loop": true,
"name": &"roll",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 6
collision_layer = 7
collision_mask = 7
script = ExtResource("1_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_fjrip")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -22)
shape = ExtResource("3_qhqgy")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -22)
shape = ExtResource("3_qhqgy")

[node name="Raycasts" type="Node2D" parent="."]

[node name="WallJump" type="Node2D" parent="Raycasts"]

[node name="RCBottomRight" type="RayCast2D" parent="Raycasts/WallJump"]
position = Vector2(0, -16)
target_position = Vector2(12, 0)

[node name="RCBottomLeft" type="RayCast2D" parent="Raycasts/WallJump"]
position = Vector2(0, -16)
target_position = Vector2(-12, 0)

[node name="Terrain" type="Node2D" parent="Raycasts"]

[node name="RCDown" type="RayCast2D" parent="Raycasts/Terrain"]
position = Vector2(0, -32)
target_position = Vector2(0, 33)

[node name="Grapple" type="Node2D" parent="Raycasts"]

[node name="RCGrapple" type="RayCast2D" parent="Raycasts/Grapple"]
position = Vector2(0, -22)
target_position = Vector2(150, -150)

[node name="CrouchRaycast1" type="RayCast2D" parent="."]
position = Vector2(-3, -3)
target_position = Vector2(0, -42)

[node name="CrouchRaycast2" type="RayCast2D" parent="."]
position = Vector2(3, -3)
target_position = Vector2(0, -42)

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[node name="JumpHeightTimer" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="Timers"]

[node name="RollCooldownTimer" type="Timer" parent="Timers"]

[node name="DashTimer" type="Timer" parent="Timers"]

[node name="RollTimer" type="Timer" parent="Timers"]

[node name="InvinsibilityTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_3v2ag")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_d2wvv")

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource("6_3v2ag")

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource("7_jej6c")

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource("8_f1ej7")

[node name="Crouching" type="Node" parent="StateMachine"]
script = ExtResource("9_oprun")

[node name="Crawling" type="Node" parent="StateMachine"]
script = ExtResource("10_a8ls1")

[node name="Rolling" type="Node" parent="StateMachine"]
script = ExtResource("11_qfm1y")

[node name="Dashing" type="Node" parent="StateMachine"]
script = ExtResource("12_3v2ag")

[node name="WallJump" type="Node" parent="StateMachine"]
script = ExtResource("13_jej6c")

[node name="RunningIce" type="Node" parent="StateMachine"]
script = ExtResource("14_f1ej7")

[node name="Sliding" type="Node" parent="StateMachine"]
script = ExtResource("15_oprun")

[node name="RunningMud" type="Node" parent="StateMachine"]
script = ExtResource("16_a8ls1")

[node name="Grappling" type="Node" parent="StateMachine"]
script = ExtResource("17_qfm1y")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, -22)

[node name="HealthBar" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="HealthBar"]
custom_minimum_size = Vector2(0.75, 0)
offset_left = 93.0
offset_top = 67.0
offset_right = 179.0
offset_bottom = 107.0
size_flags_horizontal = 4

[node name="Heart" type="TextureRect" parent="HealthBar/HBoxContainer"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2

[node name="AnimatedSprite2D" parent="HealthBar/HBoxContainer/Heart" instance=ExtResource("18_fulsm")]

[node name="Heart2" type="TextureRect" parent="HealthBar/HBoxContainer"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2

[node name="AnimatedSprite2D" parent="HealthBar/HBoxContainer/Heart2" instance=ExtResource("18_fulsm")]

[node name="Heart3" type="TextureRect" parent="HealthBar/HBoxContainer"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2

[node name="AnimatedSprite2D" parent="HealthBar/HBoxContainer/Heart3" instance=ExtResource("18_fulsm")]

[node name="Heart4" type="TextureRect" parent="HealthBar/HBoxContainer"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2

[node name="AnimatedSprite2D" parent="HealthBar/HBoxContainer/Heart4" instance=ExtResource("18_fulsm")]

[node name="Heart5" type="TextureRect" parent="HealthBar/HBoxContainer"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2

[node name="AnimatedSprite2D" parent="HealthBar/HBoxContainer/Heart5" instance=ExtResource("18_fulsm")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timers/CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="Timers/JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="Timers/JumpHeightTimer" to="." method="_on_jump_height_timer_timeout"]
[connection signal="timeout" from="Timers/InvinsibilityTimer" to="." method="_on_invinsibility_timer_timeout"]
